@@ -1,5 +1,10 @@
 2008-02-11  Mike Krüger <mkrueger@novell.com> 
 
+	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextViewMargin.cs,
+	  Mono.TextEditor/TextEditor.cs: Middle mouse button paste now works.
+
+2008-02-11  Mike Krüger <mkrueger@novell.com> 
+
 	* TangoLightStyle.xml, Mono.TextEditor.mdp, bookmark.png, OblivionStyle.xml,
 	  UbuntuStyle.xml, Mono.TextEditor/TextViewMargin.cs,
 	  Mono.TextEditor/Document.cs, Mono.TextEditor/FoldMarkerMargin.cs,
